# vibe-coding-hackton2

./: .gitignore  README.md  index.html  styles.css
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/adapters/events/: mock.py
api/app/adapters/marine/: mock.py
api/app/adapters/safety/: mock.py
api/app/core/: config.py  errors.py
api/app/dependencies/: cache.py  db.py
api/app/middlewares/: __init__.py
api/app/models/: base.py
api/app/routers/: __init__.py  alerts.py  beaches.py  events.py  groups.py  observations.py  recommendations.py
api/app/schemas/: base.py
api/app/services/: beaches.py  scoring.py
api/tests/: test_api_contract.py  test_scoring.py
data/: beachData.js
docs/: ARCHITECTURE.md
infra/: docker-compose.yml
scripts/: app.js
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css  types.ts
web/src/components/: AccordionSection.tsx  AlertBanner.tsx  BeachDetailPanel.tsx  BeachList.tsx  EventList.tsx  FilterChips.tsx  MetricCard.tsx  RecommendationList.tsx  RiskBadge.tsx  StickySummary.tsx
worker/: Dockerfile  pyproject.toml
worker/app/: main.py
